2007-08-17  Torsten Rahn  <rahn@kde.org>

    Adding credits files.

    * data/credits_authors.html
    * data/credits_data.html

2007-08-17  Torsten Rahn  <rahn@kde.org>

    Adding Save and Close button for Andrew to 
    the FileView.

    * src/lib/MarbleControlBox.ui

2007-08-17  Pino Toscano  <pino@kde.org>

    * src/KdeMainWindow.{cpp,h}
    * src/kdemain.cpp
    * src/marble.kcfg
    * src/settings.kcfgc
    * src/CMakeLists.txt
    Add KConfigXT settings for the KDE GUI.

2007-08-17  Inge Wallin  <inge@lysator.liu.se>

	Rename KAtlasControl into ControlView:
	* src/katlascontrol.cpp: rename into ControlView.cpp
	* src/katlascontrol.h:   rename into ControlView.h
	* src/KdeMainWindow.{h,cpp}: refer to new name
	* src/MainWindowCommon.cpp: refer to new name
	* src/kdemain.cpp: refer to new name
	* src/lib/CMakeLists.txt: reflect name change
	Note: Tackat will have to do the Qt-only version.
	
2007-08-17  Torsten Rahn  <rahn@kde.org>

    exposing runTimeMarbleDataPath to MarbleWidget's 
    API.

    * src/lib/MarbleWidget.{cpp,h}
    * src/lib/MarbleDirs.cpp

2007-08-17  Torsten Rahn  <rahn@kde.org>

    * src/lib/measuretool.{cpp,h}
    Renaming to MeasureTool.{cpp,h}

2007-08-17  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleDirs.cpp:
    Rearranging the code to be more in line with the
    description in MarbleDirs.h.
    Renaming the two marbleDataPaths to something more
    intuitive: compileTimeMarbleDataPath (for the cmake
    version) and runTimeMarbleDataPath (for the version
    that gets modified via the settings).

    * CMakeLists.txt:
    Adjusting the definition of MARBLE_DATA_PATH. -
    Should rather get defined like data_dir gets 
    defined in CMakeList.txt in marble/data, 
    shouldn't it?

2007-08-17  Torsten Rahn  <rahn@kde.org>

    Making naming of the directory paths more consistent
    with Qt/KDE naming scheme: "Dir" names a QDir,
    "Path" the QString of the respective directory name.
