@@ -12,7 +12,7 @@
 <H4>Main Authors</H4>
   <p>
     Torsten Rahn <a href="mailto:rahn@kde.org">rahn@kde.org</a><br>
-    <i>Original Author and Maintainer</i> 
+    <i>Original Author, Developer and Maintainer</i> 
   </p>
   <p>
     Inge Wallin <a href="mailto:inge@lysator.liu.se">inge@lysator.liu.se</a><br>
@@ -35,10 +35,12 @@
     Murad Tagirov <a href="mailto:tmurad@gmail.com">tmurad@gmail.com</a><br>
     <i>Project: KML Support for Marble</i> 
   </p>
+  <p>... and of course we'd like to thank the people at Google Inc. for 
+making these projects possible.
 
 <H4>Developers</H4>
   <p>
-    <i>Development &amp; Patches:</i> Pino Toscano, Stefan Asserhall, Prashanth Udupa, Anne-Marie Mahfouf, Josef Spillner, Frerich Raabe, Fredrik H&ouml;glund, Albert Astals Cid, Thomas Zander, Joseph Wenninger, Kris Thomsen, Daniel Molkentin
+    <i>Development &amp; Patches:</i> Pino Toscano, Stefan Asserhall, Laurent Montel, Prashanth Udupa, Anne-Marie Mahfouf, Josef Spillner, Frerich Raabe, Fredrik H&ouml;glund, Albert Astals Cid, Thomas Zander, Joseph Wenninger, Kris Thomsen, Daniel Molkentin
   </p>
   <p>
     <i>Plattforms &amp; Distributions:</i> Tim Sutton, Nikolaus Zimmermann, Christian Ehrlicher, Ralf Habacker, Steffen Joeris, Marcus Czeslinski, Marcus D. Hanwell, Chitlesh Goorah.
