@@ -30,7 +30,7 @@
 <H4>Cities and Locations</H4>
   <p>
     <i>World Gazetteer</i><br> 
-    Stefan Helders <a href="www.world-gazetteer.com">www.world-gazetteer.com</a>
+    Stefan Helders <a href="http://www.world-gazetteer.com">http://www.world-gazetteer.com</a>
   </p>
 
 <H4>Flags</H4>
