@@ -34,7 +34,11 @@ class MARBLE_EXPORT MarbleAboutDialog : public QDialog
  public:
     MarbleAboutDialog(QWidget *parent = 0);
 
+ private slots:
+    void loadPageContents( int idx );
+
  private:
+
     MarbleAboutDialogPrivate  * const d;
 };
 
